# axon

./: .gitignore  Cargo.toml  README.md
paper/: crystalline-intelligence.aux  crystalline-intelligence.out  crystalline-intelligence.tex
src/: chat.rs  config.rs  contradiction.rs  crawler.rs  criticality.rs  db.rs  embeddings.rs  export.rs  fuzzy.rs  graph.rs  main.rs  markdown.rs  nlp.rs  plugin.rs  prometheus.rs  query.rs  reasoning.rs  server.rs  sitemap.rs  tui.rs
