[package]
name = "axon"
version = "0.1.0"
edition = "2021"
description = "Lightweight continuously-learning knowledge engine — a tiny brain that grows by crawling the web"
license = "MIT"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
texting_robots = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
